CI3核心公共函数 重构

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
     ],
     "require": {},
     "autoload": {
+        "files": [
+            "Common.php"
+        ],
         "psr-4": {
             "Xzb\\Ci3\\Core\\": ""
         }
