异常处理 更新

--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,9 @@
         }
     ],
     "require": {
-        "xzb/ci3-helpers": "dev-main",
         "xzb/ci3-exception": "dev-main",
-        "xzb/ci3-database": "dev-main"
+        "xzb/ci3-database": "dev-main",
+        "xzb/ci3-helpers": "dev-main"
     },
     "autoload": {
         "psr-4": {
