--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "require": {
         "xzb/ci3-exception": "dev-main",
         "xzb/ci3-database": "dev-main",
-        "xzb/ci3-helpers": "dev-main"
+        "xzb/ci3-helpers": "dev-main",
+        "xzb/ci3-lang": "dev-main"
     },
     "autoload": {
         "psr-4": {
