--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
         }
     ],
     "require": {
-        "xzb/ci3-database": "dev-main",
-        "xzb/ci3-helpers": "dev-main"
+        "xzb/ci3-database": "v1.0.1",
+        "xzb/ci3-helpers": "v1.0.0"
     },
     "autoload": {
         "psr-4": {
